--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.4.0",
   "description": "Naive linter for English prose",
   "main": "write-good.js",
+  "bin": {
+    "write-good": "bin/write-good.js"
+  },
   "directories": {
     "test": "test"
   },
@@ -22,6 +25,7 @@
   },
   "dependencies": {
     "passive-voice": "0.0.0",
-    "weasel-words": "0.0.0"
+    "weasel-words": "0.0.0",
+    "glob": "^3.2.9"
   }
 }
