chore: update dependency versions

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "jasmine-node": "^1.14.3"
   },
   "dependencies": {
-    "passive-voice": "0.0.0",
-    "weasel-words": "0.0.0",
+    "passive-voice": "~0.0.0",
+    "weasel-words": "~0.0.0",
     "glob": "^3.2.9"
   }
 }
