--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "passive-voice": "~0.0.0",
-    "weasel-words": "~0.0.0"
+    "weasel-words": "~0.0.0",
+    "adverb-where": "~0.0.0"
   }
 }
