Update to jasmine-node 2.0
Update write-good to use newest version of jasmine-node

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "author": "Brian Ford",
   "license": "MIT",
   "devDependencies": {
-    "jasmine-node": "git://github.com/btford/jasmine-node"
+    "jasmine-node": "2.0.0"
   },
   "dependencies": {
     "passive-voice": "~0.0.0",
