add support for parse mode, where external tools can parse output easily (I have submitted Neomake support with the help of this patch, see https://github.com/neomake/neomake/pull/653)
Add a new binary name: writegood, also avoids the dash which makes
Neomake integration complex.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "https://github.com/btford/write-good.git"
   },
   "bin": {
-    "write-good": "bin/write-good.js"
+    "write-good": "bin/write-good.js",
+    "writegood": "bin/write-good.js"
   },
   "directories": {
     "test": "test"
