--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "weasel-words": "~0.1.0",
     "adverb-where": "~0.0.0",
     "too-wordy": "~0.1.0",
-    "no-cliches": "~0.1.0"
+    "no-cliches": "~0.1.0",
+    "e-prime": "~0.10.0"
   },
   "coordinates": [
     45.522199,
