Support custom language checks #64 (#66)
* Support custom language checks #64

i.e. to support linting for languages other than English

Some thoughts about my implementation:
* The tests depend on the `schreib-gut` extension I wrote.
  I could move them to the `schreib-gut` package.
* I introduced a third argument (`checks` / `--checks`). Instead, we could extend
  the `opts` argument. However, this should probably come with a
  restructuring of the `opts` object and consequently some implementation
  overhead for backwards compatibility reasons.

* #64 work in code style feedback

* #64 move "checks" config into "opts"

*  #64 Fix CLI issues with 'custom checks' changes

 * Enable all custom checks by default
 * Don't set module reference in options to "true" when determining if check is
   enabled or disabled
 * Fix "is undefined issue" on CLI if user doesn't specify custom checks

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "author": "Brian Ford",
   "license": "MIT",
   "devDependencies": {
-    "jasmine-node": "2.0.0"
+    "jasmine-node": "2.0.0",
+    "schreib-gut": "0.0.1"
   },
   "dependencies": {
     "object.assign": "^4.0.4",
