#48 add CLI help and option management
* Add CLI command line help
* Show meaningful error message if invalid command line arguments are provided
* Show meaningful error message if ``--checks`` custom module import fails
* Dynamically determine valid arguments if ``--checks`` option is provided
* ``--yes`` prefix for *E-Prime* only, bc others are active by default, anyway

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "adverb-where": "0.0.9",
+    "commander": "^2.12.2",
     "e-prime": "^0.10.2",
     "no-cliches": "^0.1.0",
     "object.assign": "^4.0.4",
