--- a/package.json
+++ b/package.json
@@ -31,9 +31,21 @@
   ],
   "author": "Brian Ford",
   "contributors": [
-    { "name": "Richard Littauer", "email": "richard@maintainer.io", "url": "https://burntfen.com" },
-    { "name": "Matt Blair", "email": "matt@mattblair.co", "url": "https://blog.mattblair.co" },
-    { "name": "Timotheus Kampik", "email": "", "url": "timotheuskampik.de" }
+    {
+      "name": "Richard Littauer",
+      "email": "richard@maintainer.io",
+      "url": "https://burntfen.com"
+    },
+    {
+      "name": "Matt Blair",
+      "email": "matt@mattblair.co",
+      "url": "https://blog.mattblair.co"
+    },
+    {
+      "name": "Timotheus Kampik",
+      "email": "",
+      "url": "timotheuskampik.de"
+    }
   ],
   "license": "MIT",
   "devDependencies": {
