--- a/package.json
+++ b/package.json
@@ -11,32 +11,59 @@
     "write-good": "bin/write-good.js",
     "writegood": "bin/write-good.js"
   },
+  "engines": {
+    "node": ">=6",
+    "npm": ">=5"
+  },
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "./node_modules/.bin/jasmine-node test"
+    "test": "npm run lint && ./node_modules/.bin/jasmine-node test",
+    "lint": "eslint ./ --fix"
   },
   "keywords": [
     "english",
     "writing",
     "prose",
-    "words"
+    "words",
+    "grammar"
   ],
   "author": "Brian Ford",
+  "contributors": [
+    {
+      "name": "Richard Littauer",
+      "email": "richard@maintainer.io",
+      "url": "https://burntfen.com"
+    },
+    {
+      "name": "Matt Blair",
+      "email": "matt@mattblair.co",
+      "url": "https://blog.mattblair.co"
+    },
+    {
+      "name": "Timotheus Kampik",
+      "email": "",
+      "url": "timotheuskampik.de"
+    }
+  ],
   "license": "MIT",
   "devDependencies": {
-    "jasmine-node": "2.0.0",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.3",
+    "jasmine-node": "^2.0.1",
     "schreib-gut": "0.0.1"
   },
   "dependencies": {
-    "adverb-where": "0.0.9",
-    "commander": "^2.12.2",
+    "adverb-where": "^0.2.0",
+    "commander": "^2.19.0",
     "e-prime": "^0.10.2",
     "no-cliches": "^0.1.0",
-    "object.assign": "^4.0.4",
     "passive-voice": "^0.1.0",
-    "too-wordy": "^0.1.4",
+    "too-wordy": "^0.2.1",
     "weasel-words": "^0.1.1"
   },
   "coordinates": [
