--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.4",
-    "jasmine-node": "^2.0.1",
+    "grunt": "^1.3.0",
+    "jasmine-node": "^3.0.0",
     "schreib-gut": "0.0.1"
   },
   "dependencies": {
